--- a/src/components/main.scss
+++ b/src/components/main.scss
@@ -242,10 +242,21 @@ p {
   background-color: #fff;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
   border-radius: 16px;
-  padding: 2em 1.2em;
-  font-size: 24px;
-  color: #6d87ad;
   max-width: 350px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  padding: 3em 1.2em;
+  span {
+    font-size: 24px;
+    color: #6d87ad;
+  }
+  img {
+    max-width: 150px;
+    position: absolute;
+    right: -30px;
+  }
 }
 
 .social-btn-container {
